Fix worm length after respawn

We accidentally leave a one-space invisible position of death behind our
worm at all times after the worm respawns (for the duration of the
current map). Invisible positions of death are bad so let's get rid of
it.

https://bugzilla.gnome.org/show_bug.cgi?id=733429